--- a/css/style.css
+++ b/css/style.css
@@ -4,53 +4,53 @@ body {
 }
 
 h1 {font-family: lato;
-color: #e43774;
-font-size: 40px; /* Approximation due to font substitution */
-font-weight: 500;
-text-align: left;
+  color: #e43774;
+  font-size: 40px; /* Approximation due to font substitution */
+  font-weight: 500;
+  text-align: left;
 transform: scaleY(1.0001); /* width and height properties ommitted due to transform */}
 
 h3 {font-family: lato;
-color: #0e0206;
-font-size: 36px; /* Approximation due to font substitution */
-font-weight: 500;
-text-align: left;
+  color: #0e0206;
+  font-size: 36px; /* Approximation due to font substitution */
+  font-weight: 500;
+  text-align: left;
 transform: scaleY(1.0001); /* width and height properties ommitted due to transform */}
 
 h4 {
-font-family: lato;
-color:  #ffffff;
-font-size: 18px;/* Approximation due to font substitution */
-font-weight: 300;
-font-style: italic;
-text-align: left;
-transform: scaleX(1.0001);/* width and height properties ommitted due to transform */
+  font-family: lato;
+  color:  #ffffff;
+  font-size: 18px;/* Approximation due to font substitution */
+  font-weight: 300;
+  font-style: italic;
+  text-align: left;
+  transform: scaleX(1.0001);/* width and height properties ommitted due to transform */
 }
 
 h2 {
   font-family: Daydreamer;
-color:  #ffffff;
-font-size: 20px;/* Approximation due to font substitution */
-font-weight: 400;
-text-align: left;
-transform: scaleX(1.0001);/* width and height properties ommitted due to transform */
+  color:  #ffffff;
+  font-size: 20px;/* Approximation due to font substitution */
+  font-weight: 400;
+  text-align: left;
+  transform: scaleX(1.0001);/* width and height properties ommitted due to transform */
 }
 
 h5{
   font-family: lato;
-color: #ffffff;
-font-size: 33.91px; /* Approximation due to font substitution */
-font-weight: 600;
-text-align: center;
+  color: #ffffff;
+  font-size: 33.91px; /* Approximation due to font substitution */
+  font-weight: 600;
+  text-align: center;
 
 }
 
 h6{
   font-family: lato;
-color: #ffffff;
-font-size: 18px; /* Approximation due to font substitution */
-font-weight: 400;
-text-align: center;
+  color: #ffffff;
+  font-size: 18px; /* Approximation due to font substitution */
+  font-weight: 400;
+  text-align: center;
 
 
 }
@@ -90,131 +90,153 @@ span {
   padding-right: 50px;
 }
 
+.navbar a:hover {background-color: #e43774;
+  transition-duration: 0.7s;}
 
-.container-2 {
-display: flex;
-justify-content: space-around;
-align-items: center;
-margin: auto 300px;
-padding-bottom: 20px;
-padding-top: 20px;
-}
-
-.container-3 {
-display: flex;
-justify-content: space-around;
-align-items: center;
-margin: auto 100px;
-
-}
-.container-jumbo {
-display: flex;
-justify-content: space-between;
-align-items: center;
-
-}
-
-
-.jumbotron{
-  background-image: url("hero-image.png");
- margin: auto 300px;
-}
-
-.herogirl {
-padding-left: 100px;
-max-height: 700px;
-margin: auto;
-}
-
-.logo {
-  padding-right: 105px;
-}
+  .avbar a:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);}
 
 
 
-.cta
-{background-color:  #1693df;
-box-shadow: 0px 6px 10.2px 1.8px rgba(0, 0, 0, 0.17);
-width: 250px;
-height: 50px;
-border-radius: 10px;
-}
+    .container-2 {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      margin: auto 400px;
+      padding-bottom: 50px;
+      padding-top: 50px;
+    }
 
-.cta a {
-  font-family: lato;
-color:  #ffffff;
-font-size: 20px;/* Approximation due to font substitution */
-font-weight: 500;
-text-align: center;
-text-decoration: none;
+    .container-3 {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      margin: auto 100px;
 
-}
+    }
+    .container-jumbo {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
-
-.page2{
-  background: #e43774;
-}
-
-.page2 img {
-  width: 300px;
-
-}
-
-.info {
-  max-width: 500px;
-}
+    }
 
 
-.page3 {
-  background:  #1693df;
+    .jumbotron{
+      background-image: url("hero-image.png");
+      margin: auto 300px;
+    }
 
-}
+    .herogirl {
+      padding-left: 100px;
+      max-height: 680px;
+      margin: auto;
+    }
+
+    .logo {
+      width: 500px;
+      padding-right: 105px;
+    }
 
 
-.page3 img {
-  margin-top: 280px;
-  padding-top: 50px;
-  height: 600px;
-  width: auto;
-}
 
-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width:353px;
-  margin-left: 100px;
-}
+    .cta
+    {background-color:  #1693df;
+      box-shadow: 0px 6px 10.2px 1.8px rgba(0, 0, 0, 0.17);
+      width: 250px;
+      height: 50px;
+      border-radius: 10px;
+    }
 
-label {
-  font-family: lato;
-}
+    .cta a {
+      font-family: lato;
+      color:  #ffffff;
+      font-size: 20px;/* Approximation due to font substitution */
+      font-weight: 500;
+      text-align: center;
+      text-decoration: none;
 
-input {
-  width: 300px;
-  height: 30px;
-  border-radius: 10px;
-}
+    }
 
-form-group{
+    .cta:hover {background-color: #e43774;
+      transition-duration: 0.7s;}
 
-  padding-top: 10px;
-}
+      .cta:active {
+        background-color: #3e8e41;
+        box-shadow: 0 5px #666;
+        transform: translateY(4px);}
 
-#bodytypeinput
-{
-  width: 306px;
-  height: 36px;
-}
 
-#agreebutton
-{
-  font-family: lato;
-color:  #ffffff;
-font-size: 20px;
-font-weight: 300;
-  background-color:  #e43774;
-  width: 306px;
-  height: 36px;
-  margin-top: 15px;
-}
+        .page2{
+          background: #e43774;
+        }
+
+        .page2 img {
+          width: 300px;
+
+        }
+
+        .info {
+          max-width: 500px;
+        }
+
+
+        .page3 {
+          background:  #1693df;
+
+        }
+
+
+        .page3 img {
+          margin-top: 280px;
+          padding-top: 50px;
+          height: 600px;
+          width: auto;
+        }
+
+        form {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          max-width:353px;
+          margin-left: 100px;
+        }
+
+        label {
+          font-family: lato;
+        }
+
+        input {
+          width: 300px;
+          height: 30px;
+          border-radius: 10px;
+        }
+
+        form-group{
+
+          padding-top: 10px;
+        }
+
+        #bodytypeinput
+        {
+          width: 306px;
+          height: 36px;
+        }
+
+        #agreebutton
+        {
+          font-family: lato;
+          color:  #ffffff;
+          font-size: 16px;
+          font-weight: 300;
+          background-color:  #e43774;
+          width: 306px;
+          height: 36px;
+          margin-top: 15px;
+          border-radius: 10px;
+        }
+
+        #agreebutton:hover {background-color: #1693df;
+          transition-duration: 0.7s;}
