--- a/css/style.css
+++ b/css/style.css
@@ -114,11 +114,12 @@ span {
 
 
     .jumbotron{
-      background-image: url("/images/hero-image.png");
       margin: auto 300px;
+
     }
 
     .herogirl {
+      display: flex;
       padding-left: 100px;
       max-height: 680px;
       margin: auto;
@@ -131,12 +132,13 @@ span {
 
 
     .cta
-    {background-color:  #1693df;
+  {background-color:  #1693df;
       box-shadow: 0px 6px 10.2px 1.8px rgba(0, 0, 0, 0.20);
       width: 250px;
       height: 50px;
       border-radius: 10px;
       margin-top: 10px;
+
     }
 
     .cta a {
@@ -219,6 +221,7 @@ span {
 
       label {
         font-family: lato;
+        color: #ffffff;
       }
 
       input {
@@ -258,9 +261,24 @@ span {
         /* MEDIA QUERIES */
 
 @media only screen and (min-width: 740px) and (max-width: 1023px) {
-  div.track {
-    width: 45%;
+
+  .container-jumbo {
+    width: 100%;
+  display: flex;
+
+    justify-content: center;
+    align-items: center;
+    margin-left: 50px;
   }
+
+  h1, h3 {
+    font-size:  30px;
+  }
+
+  h2 {
+    font-size: 10px;
+  }
+
 
   .page2 img{
     width: auto;
@@ -274,30 +292,68 @@ span {
     justify-content: center;
     align-items: center;
     max-width:300px;
-
     margin-top: 20px;
   }
+
+
+
 }
 
 @media only screen and (min-width: 250px) and (max-width: 930px) {
+
+
+
+.container-jumbo {
+  width: 100%;
+display: flex;
+
+  justify-content: flex-end;
+  align-items: center;
+  margin-left: 50px;
+}
+
+
+.logo{
+  width: 99%;
+
+}
+
+.container-2{
+  width: 100%;
+display: flex;
+
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.cta {
+  display: none;
+}
+
+
   h1 {
-    font-size: 2.25rem;
+    font-size: 1.5rem;
   }
 
   h2 {
-    font-size: 15px;
+    font-size: 10px;
   }
 
   h3 {
-    font-size: 1.75rem;
+    font-size: 1rem;
   }
 
   h4 {
-    font-size: 16px;
+    font-size: 12px;
   }
 
   h5 {
-    font-size: 1.25rem;
+    font-size: 1rem;
+  }
+
+  h6 {
+    font-size: 12px;
   }
 
   .herogirl {
@@ -307,13 +363,12 @@ span {
   }
 
 .page2 img{
-  height: 150px;
+  height: 100px;
   width: auto;
 }
 
 .page3 img{
-  height: 400px;
-  width: auto;
+  display:none;
 }
 form {
   display: flex;
